--- a/conferences_page.html
+++ b/conferences_page.html
@@ -20,7 +20,7 @@
             <div class="page-header" align="center">
                 <h3 class="text-center">International Conference on Artificial Intelligence</h3>
                 <p style="text-align:center;padding-top:5px;">Update : 2020-10-17</p>
-                <p style="text-align:center;padding-top:5px;"><strong><a href='https://github.com/tangshengeng/CCF'>Shengeng Tang</a>, VUT Group</strong></p>
+                <p style="text-align:center;padding-top:5px;"><strong><a href='https://github.com/tangshengeng'>Shengeng Tang</a>, LMC of HFUT</strong></p>
             </div>
             <table align="center" border="1" cellpadding="8" cellspacing="2">
                 <tbody>
