--- a/conferences_page.html
+++ b/conferences_page.html
@@ -4,8 +4,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title >International Conference on Artificial Intelligence</title>
-        <meta name="keywords" content="2020-2021, Conferences, Artificial Intelligence, Machine Learning, Computer Vision, Image Processing, Computer Science, Machine Learning, Robotics, Calendar, Call for Paper, CV">
-        <meta name="description" content="2020-2021 International Conferences in Artificial Intelligence, Machine Learning, Computer Vision, Data Mining, Natural Language Processing and Robotics">
+        <meta name="keywords" content="Conferences, Artificial Intelligence, Machine Learning, Computer Vision, Image Processing, Computer Science, Machine Learning, Robotics, Calendar, Call for Paper, CV">
+        <meta name="description" content="International Conferences in Artificial Intelligence, Machine Learning, Computer Vision, Data Mining, Natural Language Processing and Robotics">
 
     <link href="./conferences-files/bootstrap.css" rel="stylesheet">
     <link href="./conferences-files/bootstrap-responsive.css" rel="stylesheet">
@@ -19,8 +19,8 @@
         <div class="row">
             <div class="page-header" align="center">
                 <h3 class="text-center">International Conference on Artificial Intelligence</h3>
-                <p style="text-align:center;padding-top:5px;">Update : 2020-10-17</p>
-                <p style="text-align:center;padding-top:5px;"><strong><a href='https://github.com/tangshengeng'>Shengeng Tang</a>, LMC of HFUT</strong></p>
+                <p style="text-align:center;padding-top:5px;">Update : 2021-01-19</p>
+                <p style="text-align:center;padding-top:5px;"><strong><a href='https://tangshengeng.github.io'>Shengeng Tang</a>, LMC of HFUT</strong></p>
             </div>
             <table align="center" border="1" cellpadding="8" cellspacing="2">
                 <tbody>
@@ -119,18 +119,18 @@
 					<td style="width:7%;text-align:center; padding:1px;"><strong>A</strong></td>
 					<td style="width:20%;"><strong>IJCAI 2021</strong><strong>:</strong>&nbsp;International Joint Conference on Artificial Intelligence</td>
 					<td style="width:16%;">Montreal, Canada  <img style="vertical-align:middle;" src="./pics/ca.png"></td>
-					<td style="width:16%;">Jan 18, 2021</td>
+					<td style="width:16%;">Jan 20, 2021</td>
 					<td style="width:14%;">Aug 21 - Aug 26, 2021</td>
 					<td style="width:20%;"><a href="https://ijcai-21.org/">http://www.ijcai21.org</a></td>
 					<td style="width:7%;text-align:center;">95</td>
 				</tr>
 				<tr>
 					<td style="width:7%;text-align:center; padding:1px;"><strong>A</strong></td>
-					<td style="width:20%;"><strong>ACMMM 2020</strong><strong>:</strong>&nbsp;ACM Multimedia</td>
-					<td style="width:16%;">Seattle, United States  <img style="vertical-align:middle;" src="./pics/us.png"></td>
-					<td style="width:16%;">May 24, 2020</td>
-					<td style="width:14%;">Oct 12 - Oct 16, 2020</td>
-					<td style="width:20%;"><a href="https://2020.acmmm.org">https://2020.acmmm.org</a></td>
+					<td style="width:20%;"><strong>ACMMM 2021</strong><strong>:</strong>&nbsp;ACM Multimedia</td>
+					<td style="width:16%;">Chengdu, China  <img style="vertical-align:middle;" src="./pics/cn.png"></td>
+					<td style="width:16%;">April 4, 2021</td>
+					<td style="width:14%;">Oct 0 - Oct 24, 2021</td>
+					<td style="width:20%;"><a href="https://2021.acmmm.org">https://2021.acmmm.org</a></td>
 					<td style="width:7%;text-align:center;">58</td>
 				</tr>
 				<tr>
