--- a/conferences_page.html
+++ b/conferences_page.html
@@ -45,17 +45,17 @@
 				</tr>
 				<tr>
 					<td style="width:7%;text-align:center; padding:1px;"><strong>A</strong></td>
-					<td style="width:20%;"><strong>NeurIPS 2020</strong><strong>:</strong>&nbsp;Neural Information Processing Systems</td>
-					<td style="width:16%;">Vancouver, Canada  <img style="vertical-align:middle;" src="./pics/ca.png"></td>
-					<td style="width:16%;">Jun 5, 2020</td>
-					<td style="width:14%;">Dec 5 - Dec 12, 2020</td>
-					<td style="width:20%;"><a href="https://nips.cc/Conferences/2020">https://nips.cc/Conferences/2020</a></td>
+					<td style="width:20%;"><strong>NeurIPS 2021</strong><strong>:</strong>&nbsp;Neural Information Processing Systems</td>
+					<td style="width:16%;">Virtual  <img style="vertical-align:middle;" src="./pics/on.png"></td>
+					<td style="width:16%;">May 28, 2021</td>
+					<td style="width:14%;">Dec 6 - Dec 14, 2021</td>
+					<td style="width:20%;"><a href="https://nips.cc/Conferences/2021">https://nips.cc/Conferences/2021</a></td>
 					<td style="width:7%;text-align:center;">198</td>
 				</tr>
 				<tr>
 					<td style="width:7%;text-align:center; padding:1px;"><strong>A</strong></td>
 					<td style="width:20%;"><strong>ICML 2021</strong><strong>:</strong>&nbsp;International Conference on Machine Learning</td>
-					<td style="width:16%;">Vienna, Austria  <img style="vertical-align:middle;" src="./pics/at.png"></td>
+					<td style="width:16%;">Virtual  <img style="vertical-align:middle;" src="./pics/on.png"></td>
 					<td style="width:16%;">Feb 6, 2021 (TBD)</td>
 					<td style="width:14%;">Jul 18 - Jul 24, 2021</td>
 					<td style="width:20%;"><a href="https://icml.cc/Conferences/2021">https://icml.cc/Conferences/2021</a></td>
